agrego resto de links de peliculas de primera hilera. envío los links rotos a uno generico.

--- a/moviesInfo/movieTwo.html
+++ b/moviesInfo/movieTwo.html
@@ -33,17 +33,20 @@
   </header>
   <section class="container-movies">
     <figure class="movie-info">
-      <img src="https://image.tmdb.org/t/p/original/fSbqPbqXa7ePo8bcnZYN9AHv6zA.jpg" alt="spider-man" alt="Movie Poster"
+      <img src="https://picfiles.alphacoders.com/430/thumb-1920-430585.jpg" alt="dragon-ball" alt="Movie Poster"
         class="poster">
       <figcaption class="details">
-        <h2>El Sorprendente Hombre Araña</h2>
-        <p>Esta película, la cual está basada en el personaje de Marvel Comics del mismo nombre, narra las aventuras de
-          Peter Parker, un joven algo introvertido que, durante una visita escolar a un laboratorio, es mordido por una
-          araña alterada genéticamente.</p>
+        <h2>Dragon Ball Super</h2>
+        <p>Dragon Ball Super: Broly es una película de animación, acción y aventura dirigida por Tatsuya Nagamine.
+          La película se estrenó en Japón el 14 de diciembre de 2018 y llegó a nuestra región el 24 de enero de 20192.
+          La cinta narra el origen del poder de los saiyajin y su relación con Freezer como nunca antes se había
+          contado21.
+          Gokú y Vegeta se encuentran con Broly, un guerrero muy diferente de cualquier luchador que hayan enfrentado
+          antes</p>
         <div class="genres">
-          <span>Acción</span>
+          <span>Animación</span>
           <span>Aventura</span>
-          <span>Comedia</span>
+          <span>Acción</span>
         </div>
         <div class="rating">
           <span class="stars">★★★★☆</span>
@@ -58,9 +61,7 @@
         <br>
         <h4>Palermo</h4>
         <ul class="showtimes-list">
-          <li>11:10 am - Sala 1</li>
-          <li>1:20 pm - Sala 1</li>
-          <li>3:25 pm - Sala 2</li>
+          <li>9:15 pm - Sala 1</li>
         </ul>
       </div>
       <div class="theater">
@@ -68,9 +69,9 @@
         <br>
         <h4>Puerto Madero</h4>
         <ul class="showtimes-list">
-          <li>12:50 pm - Sala 2</li>
+          <li>11:10 am - Sala 2</li>
+          <li>1:20 pm - Sala 2</li>
           <li>3:25 pm - Sala 2</li>
-          <li>5:35 pm - Sala 2</li>
         </ul>
       </div>
       <div class="theater">
@@ -78,7 +79,9 @@
         <br>
         <h4>Belgrano</h4>
         <ul class="showtimes-list">
-          <li>9:15 pm - Sala 3</li>
+          <li>12:50 pm - Sala 3</li>
+          <li>3:25 pm - Sala 3</li>
+          <li>5:35 pm - Sala 3</li>
         </ul>
       </div>
       <div class="theater">
@@ -94,7 +97,7 @@
         <h4>Trailer</h4>
         <hr>
         <br>
-        <iframe width="100%" height="300px" src="https://www.youtube.com/embed/upwf8RsyNqQ?autoplay=1&mute=1"></iframe>
+        <iframe width="100%" height="300px" src="https://www.youtube.com/embed/SQ53hHKu0hI?autoplay=1&mute=1"></iframe>
       </div>
     </article>
   </section>
