--- a/moviesInfo/MovieFour.html
+++ b/moviesInfo/MovieFour.html
@@ -33,21 +33,21 @@
   </header>
   <section class="container-movies">
     <figure class="movie-info">
-      <img src="https://image.tmdb.org/t/p/original/fSbqPbqXa7ePo8bcnZYN9AHv6zA.jpg" alt="spider-man" alt="Movie Poster"
-        class="poster">
+      <img src="https://th.bing.com/th/id/OIP.RHKf-EggqFjQiHaDabnE_AAAAA?rs=1&pid=ImgDetMain" alt="capitan-america-civil-war"
+        alt="Movie Poster" class="poster">
       <figcaption class="details">
-        <h2>El Sorprendente Hombre Araña</h2>
-        <p>Esta película, la cual está basada en el personaje de Marvel Comics del mismo nombre, narra las aventuras de
-          Peter Parker, un joven algo introvertido que, durante una visita escolar a un laboratorio, es mordido por una
-          araña alterada genéticamente.</p>
+        <h2>Capitan America - Civil War</h2>
+        <p>Steve Rogers dirige el nuevo equipo de los Vengadores en misiones cuyo fin es salvaguardar la humanidad. 
+          Pero las misiones producen daños colaterales que fuerzan la intervención y supervisión del gobierno, Steve, en un giro sorprendente, 
+          rechaza la supervisión, a la que no se opone Tony Stark.</p>
         <div class="genres">
           <span>Acción</span>
           <span>Aventura</span>
-          <span>Comedia</span>
+          <span>Drama</span>
         </div>
         <div class="rating">
-          <span class="stars">★★★★☆</span>
-          <span class="average">4.5/5</span>
+          <span class="stars">★★★★★</span>
+          <span class="average">5/5</span>
         </div>
       </figcaption>
     </figure>
@@ -58,9 +58,7 @@
         <br>
         <h4>Palermo</h4>
         <ul class="showtimes-list">
-          <li>11:10 am - Sala 1</li>
-          <li>1:20 pm - Sala 1</li>
-          <li>3:25 pm - Sala 2</li>
+          <li>9:15 pm - Sala 1</li>
         </ul>
       </div>
       <div class="theater">
@@ -68,9 +66,9 @@
         <br>
         <h4>Puerto Madero</h4>
         <ul class="showtimes-list">
-          <li>12:50 pm - Sala 2</li>
+          <li>11:10 am - Sala 2</li>
+          <li>1:20 pm - Sala 2</li>
           <li>3:25 pm - Sala 2</li>
-          <li>5:35 pm - Sala 2</li>
         </ul>
       </div>
       <div class="theater">
@@ -78,7 +76,9 @@
         <br>
         <h4>Belgrano</h4>
         <ul class="showtimes-list">
-          <li>9:15 pm - Sala 3</li>
+          <li>12:50 pm - Sala 3</li>
+          <li>3:25 pm - Sala 3</li>
+          <li>5:35 pm - Sala 3</li>
         </ul>
       </div>
       <div class="theater">
@@ -94,10 +94,9 @@
         <h4>Trailer</h4>
         <hr>
         <br>
-        <iframe width="100%" height="300px" src="https://www.youtube.com/embed/upwf8RsyNqQ?autoplay=1&mute=1"></iframe>
+        <iframe width="100%" height="300px" src="https://www.youtube.com/embed/dKrVegVI0Us?autoplay=1&mute=1"></iframe>
       </div>
     </article>
   </section>
 </body>
-
 </html>
