--- a/moviesInfo/movieThree.html
+++ b/moviesInfo/movieThree.html
@@ -33,21 +33,24 @@
   </header>
   <section class="container-movies">
     <figure class="movie-info">
-      <img src="https://image.tmdb.org/t/p/original/fSbqPbqXa7ePo8bcnZYN9AHv6zA.jpg" alt="spider-man" alt="Movie Poster"
+      <img src="https://picfiles.alphacoders.com/147/thumb-1920-147273.jpg" alt="ratatouille" alt="Movie Poster"
         class="poster">
       <figcaption class="details">
-        <h2>El Sorprendente Hombre Araña</h2>
-        <p>Esta película, la cual está basada en el personaje de Marvel Comics del mismo nombre, narra las aventuras de
-          Peter Parker, un joven algo introvertido que, durante una visita escolar a un laboratorio, es mordido por una
-          araña alterada genéticamente.</p>
+        <h2>Ratatouille</h2>
+        <p>“Ratatouille” es una película de animación producida por Pixar y lanzada en 2007.
+          La historia sigue a un joven ratón llamado Remy, que sueña con convertirse en un chef de renombre,
+          a pesar de la oposición de su familia y su condición de roedor. Remy termina en París, donde se encuentra con
+          Linguini,
+          un joven empleado de cocina en el famoso restaurante Gusteau’s. Juntos, forman una alianza secreta para
+          alcanzar sus sueños culinarios</p>
         <div class="genres">
-          <span>Acción</span>
-          <span>Aventura</span>
-          <span>Comedia</span>
+          <span>Animación</span>
+          <span>Drama</span>
+          <span>Fantasía</span>
         </div>
         <div class="rating">
-          <span class="stars">★★★★☆</span>
-          <span class="average">4.5/5</span>
+          <span class="stars">★★★★★</span>
+          <span class="average">5/5</span>
         </div>
       </figcaption>
     </figure>
@@ -58,9 +61,7 @@
         <br>
         <h4>Palermo</h4>
         <ul class="showtimes-list">
-          <li>11:10 am - Sala 1</li>
-          <li>1:20 pm - Sala 1</li>
-          <li>3:25 pm - Sala 2</li>
+          <li>9:15 pm - Sala 1</li>
         </ul>
       </div>
       <div class="theater">
@@ -68,9 +69,9 @@
         <br>
         <h4>Puerto Madero</h4>
         <ul class="showtimes-list">
-          <li>12:50 pm - Sala 2</li>
+          <li>11:10 am - Sala 2</li>
+          <li>1:20 pm - Sala 2</li>
           <li>3:25 pm - Sala 2</li>
-          <li>5:35 pm - Sala 2</li>
         </ul>
       </div>
       <div class="theater">
@@ -78,7 +79,9 @@
         <br>
         <h4>Belgrano</h4>
         <ul class="showtimes-list">
-          <li>9:15 pm - Sala 3</li>
+          <li>12:50 pm - Sala 3</li>
+          <li>3:25 pm - Sala 3</li>
+          <li>5:35 pm - Sala 3</li>
         </ul>
       </div>
       <div class="theater">
@@ -94,7 +97,7 @@
         <h4>Trailer</h4>
         <hr>
         <br>
-        <iframe width="100%" height="300px" src="https://www.youtube.com/embed/upwf8RsyNqQ?autoplay=1&mute=1"></iframe>
+        <iframe width="100%" height="300px" src="https://www.youtube.com/embed/NgsQ8mVkN8w?autoplay=1&mute=1"></iframe>
       </div>
     </article>
   </section>
