--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
         <section class="cartelera">
 
+            <h1 id="nom" onmouseover="incTitulo()" onmouseout="volverANormal()">Joyts Cines</h1>
+
 
             <!--Inicio carrusel -->
             <div class="container">
@@ -98,9 +100,7 @@
             </div>
             <!--fin carrusel-->
 
-            <h1 id="nom" onmouseover="incTitulo()" onmouseout="volverANormal()">Joyts Cines</h1>
-
-            <h2 class="titleCartelera">Películas</h2>
+            <h2 class="titleCartelera">Cartelera</h2>
 
             <section class="tarjetas">
                 <div class="cards">
@@ -236,6 +236,7 @@
 
     </footer>
     <script src="./scripts/navbar.js"></script>
+    <script src="./scripts/hoverEffect.js"></script>
 </body>
 
 </html>
