--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joyts Cines</title>
-
+    <link rel=" icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -233,8 +233,13 @@
     </main>
 
     <footer class="footer">
-        <h2>footer</h2>
-
+        <div class="imgFooter">
+            <p>@JoytsCines</p>
+            <img src="./img/facebook.png" alt="facebook">
+            <img src="./img/instagram.png" alt="instagram">
+            <img src="./img/x.png" alt="x">
+            <img src="./img/youtube.png" alt="Youtube">
+        </div>
     </footer>
     <script src="./scripts/navbar.js"></script>
     <script src="./scripts/hoverEffect.js"></script>
