Agregando arreglos de validator

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <h2 class="titleCartelera">Cartelera</h2>
 
-            <section class="tarjetas">
+            <div class="tarjetas">
                 <div class="cards">
                     <div class="cards cuadro" >
                         <img src="https://tse4.mm.bing.net/th?id=OIP.BPT1u_bkIaE_F34XJBSfkgHaK9&pid=Api&P=0&h=180"
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </section>
 
     </main>
